<resources>
    <string name="app_name">NotiificationScheduler</string>
    <string name="notification_description">Notifications from Job Service</string>
    <string name="job_service_name">Job Service notification</string>
    <string name="job_service_title">Job Service</string>
    <string name="job_service_content">YourJob is running!</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_scheduled">\"Job Scheduled, job will run when \"</string>
    <string name="jobs_cancelled">Jobs cancelled</string>
    <string name="set_one_constraint">Please set at least one constraint</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline: </string>
    <string name="not_set">Not Set</string>
</resources>
